Actualizacion del codigo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hola acabo de crear una pagina en HTML</p>
-    <p>Y tambien le aplique un poco de git</p>
+    <p hidden>Hola acabo de crear una pagina en HTML</p>
+    <p class="titulosPequnios">Y tambien le aplique un poco de git</p>
+    <h1 id="Encabezado2" class="titulosPequenios" lang="text" style="border:rgb(0, 255, 187)"
+    tabindex="entero">Hola Soy el segundo Encabezado</h1>
+    
+    <center>
+        <p class="importante" style="background-color: aqua; font-style:oblique; border-radius: 10%;">Hello</p>
+    </center>
+    
+    <img>
+
 </body>
 </html>
